# interview_exam

./: .gitignore  Dockerfile  Jenkinsfile  README.MD  docker-compose.yml  pyproject.toml
api_automation/: pytest.ini
api_automation/api_utils/: rest_api.py
api_automation/common_utils/: logger.py
api_automation/configs/: config_template.py
api_automation/star_wars/: conftest.py  rest_base.py
api_automation/star_wars/data/film/: test_data.py
api_automation/star_wars/models/: films.py
api_automation/star_wars/service/: films.py
api_automation/star_wars/tests/films/: test_get_films_detail.py  test_get_films_list.py
logic/: hollow_triangle.py  sort_num.py
