[tool.poetry]
name = "cathaybk-interview-hw"
version = "0.1.0"
description = ""
authors = ["Steven Chen <t281547@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytest = "^8.3.2"
urllib3 = "^2.2.2"
allure-pytest = "^2.13.5"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
